--- a/index.html
+++ b/index.html
@@ -23,9 +23,15 @@
         <li class="items" data-key="html,css">html,css</li>
     </ul>
 
+    <button class="bluetoothBtn">Bluetooth</button>
 
 
-    <script src="index.js"></script>
+    <div>
+        <input class="inputGenerator" type="text" placeholder="get random password">
+        <button class="btnGenerator">click me!</button>       
+    </div>
+
+    <script src="index.js" ></script>
 </body>
 
 </html> 
