--- a/index.html
+++ b/index.html
@@ -31,6 +31,42 @@
         <button class="btnGenerator">click me!</button>       
     </div>
 
+    <div>
+       <button class="submitForTextBtn">Submit!</button>
+       <span class="subTitleTextRandom"></span>
+    </div>
+
+    <div class="d-flex justify-content-center myContainer">
+        <select class="selectOption" name="" id="">
+            <option value="">برنامه نویس مورد نظر را انتخاب کنید</option>
+            <option value="alireza">alireza</option>
+            <option value="arman">arman</option>
+            <option value="hamed">hamed</option>
+        </select>
+        <input class="setDeveloperTaskInput" type="text" placeholder="وظیفه ی برنامه نویس مورد نظر را بنویسید">
+        <button class="btnSubmitTask">ثبت</button>
+    </div>
+
+    <div>
+        <table>
+
+            <tr class="tabaleHeader">
+                <th>alireza</th>
+                <th>arman</th>
+                <th>hamed</th>
+            </tr>
+            <tbody class="tableTbodyTasks"> 
+                <tr class="tableTasks">
+                    <td class="tdOne" data-key="alireza">برنامه نویس فلاتر</td>
+                    <td class="tdTwo" data-key="arman"> برنامه نویس فرانت اند</td>
+                    <td class="tdThree" data-key="hamed">برنامه نویس پایتون</td>
+                </tr>
+            </tbody>
+            
+        </table>
+    </div>
+
+
     <script src="index.js" ></script>
 </body>
 
