--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
 
     <i class="fa-sharp fa-solid fa-star myStarMouse"></i>
 
+
+    <div class="ballContainer">
+        <i class="fa-sharp fa-solid fa-basketball basketballIcon  ballSize"></i>
+    </div>
+
     <script src="index.js" ></script>
 </body>
 
