--- a/index.html
+++ b/index.html
@@ -121,6 +121,17 @@
         <i class="fa-sharp fa-solid fa-basketball basketballIcon  ballSize"></i>
     </div>
 
+    <div class="gameTypeWordsBox">
+        <div class="typeWordsSeconds text-center"></div>
+        <input class="typeWordsInput" type="text" placeholder="Type Words">
+        <!-- <button class="typeWordsBtn">Submit</button> -->
+        <div class="typeWordsText text-center"></div>
+        <strong class="scoreText"></strong>
+    </div>
+
+    <strong class="timerGame"></strong>
+    
+
     <script src="index.js" ></script>
 </body>
 
