--- a/index.html
+++ b/index.html
@@ -132,6 +132,29 @@
     <strong class="timerGame"></strong>
     
 
+    <div class="mt-5 mb-5 mathGameBox">
+        <div class="mathIcons"> 
+            <span class="myRandomA"></span>
+            <span>+</span>
+            <span class="myRandomB"></span>
+            <span>-</span>
+            <span class="myRandomC"></span>
+            <span>=</span>
+            <span class="qustionMark">?</span>
+        </div>
+        
+        <div class="alertBox"></div>
+        <div class="mathContainer">
+            <button class="negativeValueOne mathBtn">-1</button>
+            <button class="ziroValue mathBtn">0</button>
+            <button class="oneValue mathBtn">1</button>
+            <button class="twoValue mathBtn">2</button>
+            <button class="threeValue mathBtn">3</button>
+            <button class="fourValue mathBtn">4</button>
+            <button class="fiveValue mathBtn">5</button>
+        </div>
+    </div>
+
     <script src="index.js" ></script>
 </body>
 
