--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 
@@ -29,7 +30,7 @@
 
     <div>
         <input class="inputGenerator" type="text" placeholder="get random password">
-        <button class="btnGenerator">click me!</button>       
+        <button data-aos="zoom-out-right" class="btnGenerator">click me!</button>       
     </div>
 
     <div>
@@ -159,10 +160,14 @@
     <div class="boxForWow wow animate__animated animate__backInLeft">
 
     </div>
-
+    
     <script src="js library/wow.min.js"></script>
     <script>
         new WOW().init();
+    </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
     </script>
     <script src="index.js" ></script>
 </body>
