--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 
 </head>
 <body>
-    
+    <div id="particles-js" style="
+    width: 30rem;
+    height: 30rem;
+    background-color: aquamarine;
+">jg</div>
     <a href="index.html?htm=javascript">javascript</a>
 
 
@@ -169,6 +173,9 @@
     <script>
         AOS.init();
     </script>
+
+<script src="particles.js"></script>
+<script src="app.js"></script>
     <script src="index.js" ></script>
 </body>
 
